# email-newsletter

./: Cargo.toml
devscripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  subscriptions.rs  utils.rs
