[package]
name = "email-newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email-newsletter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
reqwest = "0.11.10"
serde = { version = "1.0.137", features = ["derive"] }
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.18.2", features = ["full"] }
uuid = "1.1.0"