[package]
name = "email-newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email-newsletter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
config = "0.13.1"
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = "0.11.10"
serde = { version = "1.0.137", features = ["derive"] }
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "macros", "uuid", "postgres", "chrono", "migrate"] }
tokio = { version = "1.18.2", features = ["full"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }